<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">



	<!-- <ListView android:id="@+id/list" android:layout_width="fill_parent" 
		android:drawSelectorOnTop="false" android:scrollbars="vertical" android:layout_height="wrap_content" 
		android:layout_gravity="fill_vertical" android:layout_alignParentTop="true" 
		/> -->
	<ScrollView android:id="@+id/layout1" android:layout_height="match_parent"
		android:layout_alignParentBottom="true" android:scrollbars="horizontal|vertical"
		android:layout_width="fill_parent" android:layout_marginTop="5dip"
		android:scrollbarStyle="outsideInset" android:fillViewport="true">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:weightSum="1">

			<TextView android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:id="@+id/textView1" android:text="@string/label_matched_draw"
				android:layout_gravity="center_horizontal" android:layout_margin="6dp" />

			<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/resulttable" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:shrinkColumns="*"
				android:stretchColumns="*">

				<TableRow android:id="@+id/tableRow20"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:gravity="center_vertical" android:background="#cc0000">

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_no"
						android:id="@+id/textView20" android:layout_width="wrap_content"
						android:layout_margin="5dp" android:textStyle="bold">
					</TextView>
					
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_prize"
						android:id="@+id/textView21" android:layout_width="wrap_content"
						android:layout_margin="5dp" android:textStyle="bold">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_draw_date"
						android:id="@+id/textView22" android:layout_width="wrap_content"
						android:layout_margin="5dp" android:textStyle="bold">
					</TextView>

				</TableRow>

			</TableLayout>


			<TextView android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:id="@+id/textView2" android:text="@string/label_analysis"
				android:layout_gravity="center_horizontal" android:layout_margin="6dp" />

			<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/tableLayout1" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:shrinkColumns="*"
				android:stretchColumns="*">

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:gravity="center_vertical">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_from"
						android:id="@+id/textView3" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0" android:id="@+id/from"
						android:layout_width="wrap_content" android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:gravity="center_vertical">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_until"
						android:id="@+id/textView4" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0" android:id="@+id/until"
						android:layout_width="wrap_content" android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:gravity="center_vertical">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_first_match_on"
						android:id="@+id/textView5" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/firstmatchedon" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:gravity="center_vertical">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_last_match_on"
						android:id="@+id/textView6" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/lastmatchedon" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:gravity="center_vertical">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_total_draws"
						android:id="@+id/textView7" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/totaldraws" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:gravity="center_vertical">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_total_matched"
						android:id="@+id/textView8" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/totalmatched" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="match_parent"
					android:gravity="center_horizontal">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_total_exact_matched"
						android:id="@+id/textView9" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/totalexactmatched" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="match_parent"
					android:gravity="center_horizontal">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_total_random_matched"
						android:id="@+id/textView10" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/totalrandommatched" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="match_parent"
					android:gravity="center_horizontal">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_total_exact_matched_top3"
						android:id="@+id/textView11" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/totalexactmatchedtop3" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="match_parent"
					android:gravity="center_horizontal">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_total_random_matched_top3"
						android:id="@+id/textView12" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/totalrandommatchedtop3" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="match_parent"
					android:gravity="center_horizontal">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_average_draw_gap"
						android:id="@+id/textView13" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/averagedrawgap" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="match_parent"
					android:gravity="center_horizontal">
					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="@string/label_predicted_next_draw"
						android:id="@+id/textView14" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>

					<TextView android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_height="wrap_content" android:text="0"
						android:id="@+id/predictednextdraw" android:layout_width="wrap_content"
						android:layout_margin="5dp">
					</TextView>
				</TableRow>

			</TableLayout>

			<TextView android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_height="wrap_content" android:text="@string/label_gaps"
				android:id="@+id/textView15" android:layout_width="wrap_content"
				android:layout_margin="5dp">
			</TextView>
			<TextView android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_height="wrap_content" android:text="@string/label_gaps"
				android:id="@+id/gaps" android:layout_width="wrap_content"
				android:layout_margin="5dp">
			</TextView>

		</LinearLayout>
	</ScrollView>

	<TextView android:id="@+id/empty" android:layout_width="fill_parent"
		android:layout_height="fill_parent" style="@style/list_text"
		android:layout_below="@+id/list" android:text="" />

</LinearLayout>