<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ScrollView android:id="@+id/layout1" android:layout_height="match_parent"
		android:layout_alignParentBottom="true" android:scrollbars="horizontal|vertical"
		android:layout_width="fill_parent" android:layout_marginTop="5dip"
		android:scrollbarStyle="outsideInset" android:fillViewport="true">

		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="fill_parent">


			<TextView android:text="@string/label_lotto" android:id="@+id/textView2"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_margin="5dp"></TextView>

			<Spinner android:layout_width="fill_parent" android:id="@+id/lottolist"
				android:layout_height="wrap_content" android:layout_toRightOf="@+id/textView3"
				android:layout_margin="5dp"></Spinner>

			<TextView android:text="@string/label_from" android:id="@+id/textView4"
				android:layout_below="@+id/lottolist" android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_margin="5dp"></TextView>

			<Spinner android:id="@+id/fromdate" android:layout_height="wrap_content"
				android:layout_below="@+id/lottolist" android:layout_width="fill_parent"
				android:layout_toRightOf="@+id/textView3" android:layout_margin="5dp" />

			<TextView android:text="@string/label_until" android:id="@+id/textView5"
				android:layout_below="@+id/fromdate" android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_margin="5dp"></TextView>

			<Spinner android:id="@+id/todate" android:layout_height="wrap_content"
				android:layout_below="@+id/fromdate" android:layout_width="fill_parent"
				android:layout_toRightOf="@+id/textView3" android:layout_margin="5dp" />

			<TextView android:text="@string/label_past_draw" android:id="@+id/textView3"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_below="@+id/todate" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:layout_margin="5dp">
			</TextView>

			<EditText android:inputType="number" android:layout_height="wrap_content"
				android:editable="false" android:id="@+id/noofpastdraw"
				android:layout_below="@+id/todate" android:layout_toRightOf="@+id/textView3"
				android:layout_margin="5dp" android:layout_alignParentRight="true"
				android:layout_width="wrap_content" />

			<Button android:text="@string/label_analyze"
				android:layout_height="wrap_content" android:id="@+id/analyze"
				android:layout_width="match_parent" android:layout_below="@+id/noofpastdraw"
				android:layout_margin="5dp"></Button>

		</RelativeLayout>
	</ScrollView>
</LinearLayout>
