<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<ImageView android:src="@drawable/logo" android:layout_width="fill_parent"
		android:layout_margin="20dip" android:layout_height="wrap_content"
		android:scaleType="fitCenter" android:layout_gravity="center_horizontal"
		android:id="@+id/imageView1"></ImageView>



	<TextView android:id="@+id/appname" android:text="@string/app_name"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_below="@+id/imageView1" android:layout_gravity="center_horizontal" 
		android:layout_centerHorizontal="true"></TextView>

	<TextView android:id="@+id/version" android:textAppearance="?android:attr/textAppearanceSmall"
		android:text="@string/version" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
		android:layout_below="@+id/appname" android:layout_centerHorizontal="true">
	</TextView>
	

	<RelativeLayout android:id="@+id/InnerRelativeLayout"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">

		<TextView android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content" android:text="@string/loading"
			android:id="@+id/loading" android:layout_width="wrap_content" 
			android:layout_centerHorizontal="true">
		</TextView>

	</RelativeLayout>

</RelativeLayout>